fix: change z-index for .our-friend__button-prev, .our-friend__button-nex

--- a/shelter/pages/main/style/our-friends.css
+++ b/shelter/pages/main/style/our-friends.css
@@ -138,7 +138,7 @@
 
   border: 2px solid var(--color-primary);
   border-radius: 50%;
-  z-index: 10;
+  z-index: 2;
   cursor: pointer;
 }
 .our-friend__button-prev:hover,
